修复构建